# antd-mcp

./: .gitignore  CHANGELOG.md  README.md  mcp.json  pyproject.toml
cache/: https_4x_ant_design_components_button_cn_.html
scripts/: release.sh
src/: __init__.py  fetcher.py  requirements.txt  server.py
src/antd_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/cache/: https_4x_ant_design_components_affix_cn_.html  https_4x_ant_design_components_breadcrumb_cn_.html  https_4x_ant_design_components_divider_cn_.html  https_4x_ant_design_components_grid_cn_.html  https_4x_ant_design_components_icon_cn_.html  https_4x_ant_design_components_layout_cn_.html  https_4x_ant_design_components_overview_cn_.html  https_4x_ant_design_components_space_cn_.html  https_4x_ant_design_components_typography_cn_.html
tests/: test_server.py
